--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
       "path": "./tsconfig.app.json"
     }
   ],
-      "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
-      "exclude": ["node_modules"]
+      "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "/src/**/*.d.ts"],
+//      "exclude": ["node_modules"]
 }
